fix-vite-flag-env

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-# backendurl='http://54.208.222.9/'
+# VITE_BACKEND_URL='http://54.208.222.9/'
 
-backendurl='http://54.208.222.9'
+VITE_BACKEND_URL='http://localhost'
